--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-snap-carousel": "^3.7.4",
     "react-native-swiper": "^1.5.13",
     "react-navigation": "^2.16.0",
-    "react-router": "^4.3.1"
+    "react-router": "^4.3.1",
+    "react-router-native": "^4.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
