--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ["react-native"]
+  "presets": ["react-native"],
+  "env": {
+    "production": {
+      "plugins": ["react-native-paper/babel"]
+    }
+  }
 }
