--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "react": "16.4.1",
     "react-native": "0.56.1",
     "react-native-fast-image": "^5.0.10",
+    "react-native-paper": "^2.0.1",
     "react-native-snap-carousel": "^3.7.4",
     "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.16.0",
     "react-router": "^4.3.1",
     "react-router-native": "^4.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "prop-types": "^15.6.2",
     "babel-preset-react-native": "^5",
     "jest": "23.6.0",
     "react-test-renderer": "16.4.1"
