--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.56.1",
     "react-native-fast-image": "^5.0.10",
     "react-native-paper": "^2.0.1",
+    "react-native-picker": "^4.3.7",
     "react-native-snap-carousel": "^3.7.4",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^5.0.0",
