added card swiper component

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-paper": "^2.0.1",
     "react-native-picker": "^4.3.7",
     "react-native-snap-carousel": "^3.7.4",
+    "react-native-swipe-cards": "^0.1.1",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.16.0",
