--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.16.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
-    "react-router-native": "^4.3.0"
+    "react-router-native": "^4.3.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
