--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-responsive-ui": "^1.1.1",
     "react-native-snap-carousel": "^3.7.4",
     "react-native-swipe-cards": "^0.1.1",
+    "react-native-swipe-gestures": "^1.0.2",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.16.0",
